--- a/sw/templates/featurelabs/base.html
+++ b/sw/templates/featurelabs/base.html
@@ -9,7 +9,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb_url 'Feature Labs' featurelabs_index %}
+    {% breadcrumb_url_css "icon-link lightning-link" 'Labs' featurelabs_index %}
 {% endblock %}
 
 {% block content_body %}
