--- a/sw/templates/wakawaka/revisions.html
+++ b/sw/templates/wakawaka/revisions.html
@@ -19,7 +19,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb page.slug '../' %}
+    {% breadcrumb_css "icon-link page-link" page.slug '../' %}
     {% breadcrumb 'Change History' %}
 {% endblock %}
 
