--- a/sw/templates/wakawaka/base_breadcrumbs.html
+++ b/sw/templates/wakawaka/base_breadcrumbs.html
@@ -4,15 +4,17 @@
 {% if group %}
 
     {% for parent in group.parents %}
-        {% breadcrumb_url parent.name teams_team slug=parent.slug %}
+        {% breadcrumb_url_css "icon-link group-link" parent.name teams_team slug=parent.slug %}
     {% endfor %}
-    {% breadcrumb_url group.name teams_team slug=group.slug %}
+    {% breadcrumb_url_css "icon-link group-link" group.name teams_team slug=group.slug %}
+
     {# @@@ How can we clean this up for groupurls? #}
     {# The following doesn't work. #}
     {# {% with groupurl wakawaka_index group as indexurl %} #}
     {#     {% breadcrumb 'Wiki' indexurl %} #}
     {# {% endwith %} #}
-    <li><a href="{% groupurl wakawaka_index group %}">Pages</a></li>
+    <li><span class="icon-link folder-link"><a href="{% groupurl wakawaka_index group %}"><span>Pages</span></a></span></li>
+
 {% else %}
     {% breadcrumb_url 'Legacy Pages' wakawaka_index %}
 {% endif %}
