--- a/sw/templates/sw/hq.html
+++ b/sw/templates/sw/hq.html
@@ -1,6 +1,7 @@
 {% extends "base_hq_6_6.html" %}
 
 {% load breadcrumbs %}
+{% load i18n %}
 {% load uni_form_tags %}
 
 {% block body_class %}{{ block.super }} hq-signup{% endblock %}
