header style updates

--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -296,6 +296,19 @@ div#breadcrumbs {
 
 div#content {
   margin-top: 10px; }
+  div#content h1, div#content h2, div#content h3, div#content h4, div#content h5, div#content h6 {
+    font-weight: normal;
+    color: #06294f; }
+  div#content h1 {
+    border-bottom: 2px solid #06294f;
+    padding: 0 10px 0 10px; }
+
+.hq div#content h1, .hq div#content h2, .hq div#content h3, .hq div#content h4, .hq div#content h5, .hq div#content h6 {
+  color: #003322; }
+.hq div#content h1 {
+  border-bottom-color: #0b4f96;
+  border-bottom-width: 3px;
+  background-color: #bfdcfa; }
 
 div#sidebar {
   font-size: smaller; }
