Wording/capitalization updates.

--- a/sw/templates/dashboard/index.html
+++ b/sw/templates/dashboard/index.html
@@ -32,7 +32,7 @@
         {% endif %}
     {% endif %}
 
-    <h1>Recent Activity in Your Teams</h1>
+    <h1>Recent activity in teams you've joined</h1>
 
     {% autopaginate team_actions %}
 
