--- a/sw/templates/sidebars/wikicommon.html
+++ b/sw/templates/sidebars/wikicommon.html
@@ -1,9 +1,9 @@
 {% load group_tags %}
 
 <div class="section">
-    <h1>Wiki Tools</h1>
+    <h1>Page tools</h1>
 
-    <p>Tools for wiki pages in <em>{{ group.name }}</em>:</p>
+    <p>Tools for pages in <em>{{ group.name }}</em>:</p>
 
     <ul>
         <li><a href="{% groupurl wakawaka_index group %}">View and edit the team home page</a></li>
