--- a/sw/templates/sw/placeholders/friends.html
+++ b/sw/templates/sw/placeholders/friends.html
@@ -2,6 +2,7 @@
 
 {% load breadcrumbs feature_tag %}
 {% load group_tags %}
+{% load wakacms_tags %}
 
 {% block body_class %}{{ block.super }} friends-section{% endblock %}
 
@@ -11,13 +12,5 @@
 {% endblock %}
 
 {% block body %}
-    {% if wakacms_snippets.HqFriendsPlaceholder.latest %}
-        {% with wakacms_snippets.HqFriendsPlaceholder.latest as snippet %}
-            {% include "wakacmsplugin/wikipagesnippet.html" %}
-        {% endwith %}
-    {% else %}
-        {% if is_wakacms_team_member %}
-            <p>WARNING: No <a href="{% groupurl wakawaka_page wakacms_snippetgroup slug='HqFriendsPlaceholder' %}">wiki page</a>.</p>
-        {% endif %}
-    {% endif %}
+    {% wikipagesnippet HqFriendsPlaceholder latest %}
 {% endblock %}
