--- a/sw/templates/sidebars/yourteams.html
+++ b/sw/templates/sidebars/yourteams.html
@@ -7,7 +7,7 @@
         {% endfor %}
     </ul>
 
-    {% if group %}
+    {% if not team_tree %}
         {# Only show this if we're in a team right now.  Redundant if we're on the teams index. #}
         <div class="more">
             <a href="{% url teams_index %}">All teams »</a>
