Add a preamble snippet to the all teams page.

--- a/sw/templates/teams/index.html
+++ b/sw/templates/teams/index.html
@@ -3,6 +3,7 @@
 {% load breadcrumbs feature_tag %}
 {% load feature_tag %}
 {% load pagination_tags %}
+{% load wakacms_tags %}
 
 {% block head_title %}Teams{% endblock %}
 
@@ -14,6 +15,8 @@
 {% endblock %}
 
 {% block body %}
+
+    {% wikipagesnippet AllTeamsListPreamble latest %}
 
     {% feature team_groupings %}
 
