because words do matter: "validate" -> "verify"

--- a/sw/templates/base/nags.html
+++ b/sw/templates/base/nags.html
@@ -1,6 +1,6 @@
 {% if missing_info.email %}
     <p>
-        Please <a href="{% url account_email %}">add and validate an email address</a>.
+        Please <a href="{% url account_email %}">add and verify an email address</a>.
     </p>
 {% endif %}
 
