Move friends up to user bar, introduce library link.

--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -227,7 +227,7 @@ div#site-sections {
   background: #0b4f96;
   color: white; }
 
-.hq.friends-section div#site-sections a#friends-link {
+.hq.library-section div#site-sections a#library-link {
   background: #0b4f96;
   color: white; }
 
