--- a/sw/templates/menu/site_sections_volunteer.html
+++ b/sw/templates/menu/site_sections_volunteer.html
@@ -3,5 +3,5 @@
 <li><a id="local-link" href="/local/">Local</a></li>
 <li><a id="state-link" href="/state/">Statewide</a></li>
 <li><a id="support-link" href="/support/">Support</a></li>
-<li><a id="friends-link" href="/friends/">Friends</a></li>
+<li><a id="library-link" href="/library/">Library</a></li>
 <li><a id="coordinators-link" href="/coordinators/">Coordinators</a></li>
