--- a/sw/templates/idios/profile.html
+++ b/sw/templates/idios/profile.html
@@ -16,82 +16,82 @@
 {% endblock %}
 
 {% block body %}
+    <div class="prefix_2 grid_8 suffix_2">
+        <div class="vcard">
+            {# TODO: needs fn (full name) class on some element that contains full name #}
 
-    <div class="vcard">
-        {# TODO: needs fn (full name) class on some element that contains full name #}
+            {% if is_me %}
 
-        {% if is_me %}
+                {% feature breadcrumbs %}{% disabled %}
+                    <h1>{% trans "Your Profile" %}</h1>
+                {% endfeature %}
 
-            {% feature breadcrumbs %}{% disabled %}
-                <h1>{% trans "Your Profile" %}</h1>
-            {% endfeature %}
+                <ul>
+                    <li><a href="{% url profile_edit %}">{% trans "Edit profile" %}</a></li>
+                    <li><a href="{% url account_email %}">{% trans "Manage email addresses" %}</a></li>
+                    <li><a href="{% url socialaccount_connections %}">{% trans "Manage third-party logins" %}</a></li>
+                </ul>
 
-            <ul>
-                <li><a href="{% url profile_edit %}">{% trans "Edit profile" %}</a></li>
-                <li><a href="{% url account_email %}">{% trans "Manage email addresses" %}</a></li>
-                <li><a href="{% url socialaccount_connections %}">{% trans "Manage social network connections" %}</a></li>
-            </ul>
+                <div class="profile_info">
+                    <p><b>{% trans "Username" %}</b>: {{ page_user.username }}</p>
 
-            <div class="profile_info">
-                <p><b>{% trans "Username" %}</b>: {{ page_user.username }}</p>
+                    {% with page_user.get_profile as p %}
+                        {% if p.preferred_name %}
+                            <p><b>{% trans "Preferred Name" %}</b>: {{ p.preferred_name }}</p>
+                        {% endif %}
 
-                {% with page_user.get_profile as p %}
-                    {% if p.preferred_name %}
-                        <p><b>{% trans "Preferred Name" %}</b>: {{ p.preferred_name }}</p>
-                    {% endif %}
+                        {% if p.first_name or p.last_name %}
+                            <p><b>{% trans "Full Name" %}</b>: {{ p.first_name }} {{p.last_name}}</p>
+                        {% endif %}
 
-                    {% if p.first_name or p.last_name %}
-                        <p><b>{% trans "Full Name" %}</b>: {{ p.first_name }} {{p.last_name}}</p>
-                    {% endif %}
+                        {% if p.zip_code %}
+                            <p><b>{% trans "ZIP Code" %}</b>: {{ p.zip_code }}</p>
+                        {% endif %}
 
-                    {% if p.zip_code %}
-                        <p><b>{% trans "ZIP Code" %}</b>: {{ p.zip_code }}</p>
-                    {% endif %}
+                        {% if p.mailing_address %}
+                            <p><b>{% trans "Mailing Address" %}</b>:<br /><pre>{{ p.mailing_address }}</pre></p>
+                        {% endif %}
 
-                    {% if p.mailing_address %}
-                        <p><b>{% trans "Mailing Address" %}</b>:<br /><pre>{{ p.mailing_address }}</pre></p>
-                    {% endif %}
+                        {% if p.phone_number %}
+                            <p><b>{% trans "Phone Number" %}</b>: {{ p.phone_number }}</p>
+                        {% endif %}
 
-                    {% if p.phone_number %}
-                        <p><b>{% trans "Phone Number" %}</b>: {{ p.phone_number }}</p>
-                    {% endif %}
+                        {% if p.yahoo_messenger %}
+                            <p><b>{% trans "Yahoo! Messenger" %}</b>: {{ p.yahoo_messenger }}</p>
+                        {% endif %}
 
-                    {% if p.yahoo_messenger %}
-                        <p><b>{% trans "Yahoo! Messenger" %}</b>: {{ p.yahoo_messenger }}</p>
-                    {% endif %}
+                        {% if p.aim %}
+                            <p><b>{% trans "AIM" %}</b>: {{ p.aim }}</p>
+                        {% endif %}
 
-                    {% if p.aim %}
-                        <p><b>{% trans "AIM" %}</b>: {{ p.aim }}</p>
-                    {% endif %}
+                        {% if p.msn_messenger %}
+                            <p><b>{% trans "MSN Messenger" %}</b>: {{ p.msn_messenger }}</p>
+                        {% endif %}
 
-                    {% if p.msn_messenger %}
-                        <p><b>{% trans "MSN Messenger" %}</b>: {{ p.msn_messenger }}</p>
-                    {% endif %}
+                        {% if p.skype %}
+                            <p><b>{% trans "Skype" %}</b>: {{ p.skype }}</p>
+                        {% endif %}
 
-                    {% if p.skype %}
-                        <p><b>{% trans "Skype" %}</b>: {{ p.skype }}</p>
-                    {% endif %}
+                        {% if p.preferred_contact_methods %}
+                            <p><b>{% trans "Preferred Contact Methods" %}</b>: {{ p.preferred_contact_methods }}</p>
+                        {% endif %}
 
-                    {% if p.preferred_contact_methods %}
-                        <p><b>{% trans "Preferred Contact Methods" %}</b>: {{ p.preferred_contact_methods }}</p>
-                    {% endif %}
+                        {% if p.bio %}
+                            <p><b>{% trans "Bio" %}</b>: {{ p.bio }}</p>
+                        {% endif %}
+                    {% endwith %}
+                </div>
 
-                    {% if p.bio %}
-                        <p><b>{% trans "Bio" %}</b>: {{ p.bio }}</p>
-                    {% endif %}
-                {% endwith %}
-            </div>
+            {% else %}
 
-        {% else %}
+                {% feature breadcrumbs %}{% disabled %}
+                    <h1>{% trans "Profile for" %} {{ page_user.get_profile }}</h1>
+                {% endfeature %}
 
-            {% feature breadcrumbs %}{% disabled %}
-                <h1>{% trans "Profile for" %} {{ page_user.get_profile }}</h1>
-            {% endfeature %}
+                <p>(Viewing others' profiles is not yet enabled.)</p>
 
-            <p>(Viewing others' profiles is not yet enabled.)</p>
+            {% endif %}
 
-        {% endif %}
-
+        </div>
     </div>
-
 {% endblock %}
