--- a/sw/templates/idios/profile_form_contents.html
+++ b/sw/templates/idios/profile_form_contents.html
@@ -1,10 +1,13 @@
 {% load uni_form_tags %}
 
 {% csrf_token %}
+
 <fieldset class="inlineLabels">
-    {{ profile_form|as_uni_form }}
-    <div class="form_block">
-        <input type="submit" value="update" />
-        or <a href="{% url profile_detail username=user.username %}">cancel</a>
-    </div>
+    {# {{ profile_form|as_uni_form }} #}
+    {# <div class="form_block"> #}
+    {#     <input type="submit" value="update" /> #}
+    {#     or <a href="{% url profile_detail username=user.username %}">cancel</a> #}
+    {# </div> #}
+
+    {% uni_form profile_form profile_form.helper %}
 </fieldset>
