--- a/sw/templates/base.html
+++ b/sw/templates/base.html
@@ -17,7 +17,7 @@
     <link href="{{ STATIC_URL }}uni_form/uni-form.css" rel="stylesheet">
 
     {# Base #}
-    <link href="{{ STATIC_URL }}css/base.css?2010121603" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/base.css?2010121802" rel="stylesheet">
 
     {% block css %}{% endblock %}
 
@@ -49,7 +49,8 @@
     <span class="left">{% spaceless %}
         {% block auth_bar_left %}
             {% if user.is_authenticated %}
-                <a href="{% url dashboard_index %}">« Back to HQ</a>
+                <span class="icon-link bullet_yellow-link"><a href="/"><span>Public Website</span></a></span>
+                <span class="icon-link bullet_go-link-hover"><a href="{% url dashboard_index %}"><span>Volunteer HQ</span></a></span>
             {% endif %}
         {% endblock %}
     {% endspaceless %}</span>
