--- a/sw/templates/base/auth_bar_signedin.html
+++ b/sw/templates/base/auth_bar_signedin.html
@@ -1,9 +1,8 @@
 {% load feature_tag %}
-<span>Signed in as {{ user.get_profile }}.</span>
+<span class="icon-link user_green-link"><a href="{% url profile_detail username=user.username %}"><span>{{ user.get_profile }}</span></a></span>
+<span class="icon-link group_link-link "><a href="/friends/"><span>Friends</span></a></span>
 <span class="icon-link lightning-link"><a href="{% url featurelabs_index %}"><span>Labs</span></a></span>
 {% if user.is_staff %}
-    <span><a href="/admin/"><span>Django Admin</span></a></span>
+    <span class="icon-link eye-link"><a href="/admin/"><span>Admin</span></a></span>
 {% endif %}
-<span><a href="/friends/">Friends</a></span>
-<span><a href="{% url profile_detail username=user.username %}">Your Profile</a></span>
-<span><a href="{% url account_logout %}">Sign Out</a></span>
+<span class="icon-link door_in-link"><a href="{% url account_logout %}"><span>Sign Out</span></a></span>
